<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--Title Texts-->
    <string name="app_name">Test App Main Menu</string>
    <string name="title_activity_settings_menu">Settings</string>

    <!--Test message on settings activity -->
    <string name="edit_message">Enter a message</string>
    <string name="edit_message_default">Enter a message</string>
    <string name="saveFile">Save to File</string>
    <string name="fileTextLabel">Text From File</string>
    <string name="defaultTVText">Text From File</string>
    <string name="fileSaved">File saved successfully!</string>

    <!--Witcher Page settings menu-->
    <string name="refresh_window">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="action_sensors">Sensors Example</string>
    <string name="action_weather">Weather</string>
    <string name="action_immersive">Toggle Full Screen Mode</string>
    <string name="action_butter">Butter Test</string>

    <!--Toast Text-->
    <string name="fullScreenOff">Full Screen mode: OFF!</string>
    <string name="fullScreenOn">Full Screen mode: ON!</string>
    <string name="refreshString">Refreshing Page...</string>
    <string name="text_saved">Text Saved!!</string>
    <string name="textRestored">Text Field data restored successfully!</string>

    <!--Button Text-->
    <string name="hideBar">Hide Bar</string>
    <string name="showBar">Show Bar</string>
    <string name="saveButton">Save Text</string>
    <string name="resetButton">Reset Text</string>
    <string name="sendWearable">Send to Wearable</string>

    <!--Text for settings page-->
    <string name="settings_info"><![CDATA[This is the settings menu. Checking if <a href="http://google.com">Links work?</a>]]></string>
    <string name="longitude_default_text">Longitude</string>
    <string name="lat_default_text">Latitude : </string>
    <string name="geolocation_addr_default">Geolocation Address</string>
    <string name="conn_status_label">Connection Status:</string>
    <string name="the_connect_status_default_text">The Status</string>
    <string name="update_time_default_text">Update Time</string>
    <string name="update_time_label_text">Update Time:</string>
    <string name="toggle_button_text">Toggle GPS Update</string>
    <string name="gps_constant_label_text">GPS Constant</string>
    <string name="lat_long_label_text">Latitude/Longitude</string>
    <string name="location_data_label_text">Location Data</string>
    <string name="title_activity_map_view">Map View</string>

    <string name="hello_world">Hello world!</string>
    <string name="MapItText">MapIt</string>


    <!-- Text for sensors menu -->
    <string name="title_activity_sensors_menu">Sensors Example</string>
    <string name="dialog_cancel_text">Cancel</string>
    <string name="response_message_default">Default Response</string>
    <string name="default_time">Last Updated</string>
    <string name="title_activity_weather">Weather</string>
    <string name="title_activity_data_binding">DataBinding</string>
    <string name="title_activity_butter">ButterActivity</string>
    <string name="connectionStatus">connectionStatus</string>
    <string name="longitudeDefaultText">Longitude</string>
    <string name="latitudeDefaultText">Latitude</string>
    <string name="RefreshWeatherButton">Refresh Weather</string>

</resources>