<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Witcher3Map">
    <item
        android:id="@+id/refresh_window"
        android:orderInCategory="100"
        android:title="@string/refresh_window"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sensors"
        android:orderInCategory="100"
        android:title="@string/action_sensors"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_butter"
        android:orderInCategory="100"
        android:title="@string/action_butter"
        app:showAsAction="never" />
    <item
    android:id="@+id/action_weather"
    android:orderInCategory="100"
    android:title="@string/action_weather"
    app:showAsAction="never" />
    <item
        android:id="@+id/action_immersive"
        android:orderInCategory="100"
        android:title="@string/action_immersive"
        app:showAsAction="never" />
</menu>
